<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{5c79471f-e615-4439-a790-d5814807d7e6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	mb_Input_Coils : ARRAY [0..3] OF BOOL;
	mb_Output_Coils : ARRAY [0..3] OF BOOL;
	mb_Input_Registers : ARRAY [0..3] OF WORD;
	mb_Output_Registers : ARRAY [0..2] OF WORD;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>